<resources>
    <string name="app_name">MAD PROJECT</string>
    <string name="register1">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_log_in">Already have an account? Log In</string>
    <string name="login">Login</string>
    <string name="fab">FAB</string>
    <string name="dot">•</string>
    <string name="write_tags_here_text">Write tags here</string>
    <string name="textViewTitle">How to write a good proposal for your project</string>
    <string name="img_article_thumbnail_description">imgArticleThumbnailDescription</string>
    <string name="img_author_profile_pic">img_author_profile_pic</string>
    <string name="author_name">Author name</string>
    <string name="article_date">1/1/2021</string>
    <string name="read_duration">9 min read</string>
    <string name="option_icon_description">option_icon_description</string>
    <string name="bookmark_icon_description">bookmark icon description</string>
    <string name="trending_reads_today">Trending reads today</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>

    <string name="email_not_verified">The email above is not verified \n Click on the button below to verify it</string>
    <string name="resend_verification">Resend Verification Email</string>
    <string name="forgot_pass">Forgot Password</string>

    <string name="create_a_new_account">Create a new account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="blog">Blog</string>
    <string name="audio">Audio</string>
    <string name="enter_title">Enter Title</string>
    <string name="attach_audio">Attach audio</string>
    <string name="upload_audio">Upload Audio</string>
    <string name="insert_blog_image">Insert blog image</string>
    <string name="title">Title</string>
    <string name="publish">Publish</string>
    <string name="pause_video">Pause</string>

    <string name="mytoken">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</string>

    <string name="username_prof">Username</string>
    <string name="full_name_prof">Full Name</string>
    <string name="email_prof">Email</string>
    <string name="phone_number_prof">Phone Number</string>
    <string name="update_details_profilr">Update Details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>