<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    >


    <TextView
        android:id="@+id/tvTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/write_tags_here_text"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        >

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="22sp"
            android:textStyle="bold"

            android:text="@string/textViewTitle"
            android:layout_marginEnd="4dp"
            android:maxLines="3"
            android:ellipsize="end"
            android:layout_marginRight="4dp" />


        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/imgArticleThumbnail"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:contentDescription="@string/img_article_thumbnail_description"/>


            <ImageView
                android:id="@+id/imgAuthorProfilePic"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom|start"
                android:padding="3dp"
                android:contentDescription="@string/img_author_profile_pic"
                />


        </FrameLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_name"
            android:maxLines="1"
            android:ellipsize="end"

            android:layout_marginBottom="4dp"
            />

        <TextView
            android:id="@+id/tvTimeStamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAuthor"
            android:text="@string/article_date"
            />

        <TextView
            android:id="@+id/tvDot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dot"
            android:layout_below="@id/tvAuthor"
            android:layout_toEndOf="@id/tvTimeStamp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"

            android:layout_toRightOf="@id/tvTimeStamp" />


        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_duration"

            android:layout_toEndOf="@id/tvDot"
            android:layout_below="@id/tvAuthor"
            android:layout_toRightOf="@id/tvDot" />



        <TextView
            android:id="@+id/imgPremium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tvDuration"
            android:layout_below="@id/tvAuthor"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="4dp"
            android:layout_toStartOf="@id/imgBookMark"
            android:layout_toRightOf="@id/tvDuration"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="4dp"
            android:layout_toLeftOf="@id/imgBookMark"
            app:drawableLeftCompat="@drawable/ic_star"
            android:drawableLeft="@drawable/ic_star"
            app:drawableStartCompat="@drawable/ic_star"
            android:drawableStart="@drawable/ic_star"
            tools:ignore="UseCompatTextViewDrawableXml" />


        <ImageView
            android:id="@+id/imgOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_more_vert"
            android:layout_below="@id/tvAuthor"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/option_icon_description"/>


        <ImageView
            android:id="@+id/imgBookMark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bookmark"
            android:layout_below="@id/tvAuthor"
            android:layout_toStartOf="@id/imgOptions"
            android:layout_marginEnd="16dp"
            android:layout_toLeftOf="@id/imgOptions"
            android:layout_marginRight="16dp"
            android:contentDescription="@string/bookmark_icon_description"/>


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"

        />

</LinearLayout>