<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AudioFragment">


    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <ImageButton
        android:id="@+id/audio_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/insert_image"
        android:scaleType="fitXY"/>

    <EditText
        android:id="@+id/audio_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_title"
        android:layout_marginBottom="50dp"/>


        <Button
            android:id="@+id/attach_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/attach_audio" />

        <Button
            android:id="@+id/audio_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/upload_audio" />

    </LinearLayout>
</FrameLayout>