<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlogFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <ImageButton
        android:id="@+id/blogImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/ic_baseline_insert_photo"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/insert_blog_image">

    </ImageButton>
    <EditText
        android:id="@+id/blogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:hint="@string/title"
        android:layout_marginBottom="20dp"
        android:inputType="text">

    </EditText>

    <EditText
        android:id="@+id/blogStory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Type story here"
        android:inputType="textMultiLine"
        android:layout_marginBottom="40dp">

    </EditText>

    <Button
        android:id="@+id/publishBlog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publish"
        android:background="@color/black"
        android:layout_gravity="center">

    </Button>
    </LinearLayout>
</FrameLayout>