<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2019 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
  in compliance with the License. You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software distributed under the License
  is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
  or implied. See the License for the specific language governing permissions and limitations under
  the License.
  -->


<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="5dp"
    app:cardCornerRadius="10dp"

  >


  <androidx.constraintlayout.widget.ConstraintLayout

      android:id="@+id/course_item"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      >



    <View
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTopic"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="@id/tvTopic"
        />

    <Space
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imgArticleThumbnail"/>

    <ImageView
        android:id="@+id/imgArticleThumbnail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/space"
        app:layout_constraintEnd_toStartOf="@id/tvTopic"
        app:layout_constraintTop_toTopOf="@id/tvTopic"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
        app:layout_constraintDimensionRatio="1:1"
        app:srcCompat="@drawable/stroked_course_image_placeholder"
        android:scaleType="centerCrop"
        />

    <TextView
        android:id="@+id/tvTopic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/imgArticleThumbnail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        android:paddingHorizontal="@dimen/grid_2"
        android:paddingTop="@dimen/grid_2"
        android:lines="2"
        android:ellipsize="end"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        />

    <ImageView
        android:id="@+id/course_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tvTopic"
        app:layout_constraintTop_toTopOf="@id/tvTitle"
        app:layout_constraintBottom_toBottomOf="@id/tvTitle"
        android:paddingStart="@dimen/grid_2"
        app:srcCompat="@drawable/ic_course"
        app:tint="?attr/colorPrimary"
        android:importantForAccessibility="no"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/course_icon"
        app:layout_constraintEnd_toStartOf="@id/imgAuthorProfilePic"
        app:layout_constraintTop_toBottomOf="@id/tvTopic"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingStart="@dimen/grid_1"
        android:paddingVertical="@dimen/grid_2"
        android:textColor="?attr/colorPrimary"
        android:textAppearance="?attr/textAppearanceCaption"
     />

  <ImageView
      android:id="@+id/imgAuthorProfilePic"
      android:layout_width="28dp"
      android:layout_height="28dp"
      android:layout_marginEnd="@dimen/grid_2"
      android:importantForAccessibility="no"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/tvTopic"

      app:layout_constraintTop_toBottomOf="@id/tvTopic" />

    <View
        android:id="@+id/highlight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/imgArticleThumbnail"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:foreground="@drawable/small_component_foreground"/>

  <TextView
      android:id="@+id/tvAuthor"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ellipsize="end"
      android:maxLines="1"
      android:text="@string/author_name"

      android:visibility="gone"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/highlight" />

  <TextView
      android:id="@+id/tvTimeStamp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/tvAuthor"
      android:text="@string/article_date"
      android:visibility="gone"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tvAuthor" />

  <TextView
      android:id="@+id/imgPremium"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/tvAuthor"
      android:layout_marginStart="6dp"
      android:layout_toEndOf="@id/tvDuration"
      android:drawableStart="@drawable/ic_star"
      android:drawableLeft="@drawable/ic_star"
      android:visibility="gone"
      app:drawableLeftCompat="@drawable/ic_star"
      app:drawableStartCompat="@drawable/ic_star"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tvTimeStamp"
      tools:ignore="UseCompatTextViewDrawableXml" />

  <TextView
      android:id="@+id/tvDuration"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/read_duration"
      android:visibility="gone"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/imgPremium" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
